# aiOS

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
aios-kernel/src/: lib.rs
aios-proto/: Cargo.toml  build.rs
aios-proto/src/: lib.rs
aios-protocol/: Cargo.toml
aios-protocol/src/: billing.rs  blob.rs  budget.rs  evaluation.rs  event.rs  finance.rs  homeostasis.rs  hypervisor.rs  identity.rs  ids.rs  kernel.rs  knowledge.rs  lib.rs  network_isolation.rs  ports.rs  proto_bridge.rs  relay.rs  sandbox.rs  session.rs  tool.rs  world.rs
aios-runtime/: Cargo.toml
aios-runtime/src/: lib.rs
aios-runtime/tests/: client_tools.rs  tool_history.rs
apps/aios-api/: Cargo.toml  README.md
apps/aios-api/src/: main.rs  openapi.rs  vercel_v6.rs
apps/aiosd/: Cargo.toml
apps/aiosd/src/: main.rs
context/: 04-release-readiness.md
crates/aios-events/: Cargo.toml
crates/aios-events/src/: lib.rs
crates/aios-kernel/: Cargo.toml
crates/aios-kernel/src/: lib.rs
crates/aios-memory/: Cargo.toml  README.md
crates/aios-memory/src/: lib.rs
crates/aios-model/: Cargo.toml  README.md
crates/aios-model/src/: lib.rs
crates/aios-policy/: Cargo.toml
crates/aios-policy/src/: lib.rs
crates/aios-protocol/: Cargo.toml
crates/aios-protocol/src/: event.rs  ids.rs  lib.rs  policy.rs  ports.rs  state.rs  tool.rs
crates/aios-runtime/: Cargo.toml  README.md
crates/aios-runtime/src/: lib.rs
crates/aios-sandbox/: Cargo.toml
crates/aios-sandbox/src/: lib.rs
crates/aios-tools/: Cargo.toml
crates/aios-tools/src/: lib.rs
docs/: ARCHITECTURE.md  INSIGHTS.md  README.md  REFERENCE.md  SOURCES.md  STATUS.md
