[package]
name = "aios-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-kernel = { path = "../../crates/aios-kernel", version = "0.1.0" }
aios-protocol = { path = "../../crates/aios-protocol", version = "0.1.0" }
anyhow.workspace = true
async-stream.workspace = true
axum.workspace = true
clap.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[lints]
workspace = true
