[package]
name = "aiosd"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-kernel = { path = "../../crates/aios-kernel" }
aios-protocol = { path = "../../crates/aios-protocol" }
anyhow.workspace = true
clap.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[lints]
workspace = true
