[package]
name = "aios-events"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-model = { path = "../aios-model" }
anyhow.workspace = true
async-trait.workspace = true
parking_lot.workspace = true
serde_json.workspace = true
tokio.workspace = true
tokio-stream.workspace = true
tracing.workspace = true

[lints]
workspace = true
