[package]
name = "aios-kernel"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-events = { path = "../aios-events" }
aios-memory = { path = "../aios-memory" }
aios-protocol = { path = "../aios-protocol" }
aios-policy = { path = "../aios-policy" }
aios-runtime = { path = "../aios-runtime" }
aios-sandbox = { path = "../aios-sandbox" }
aios-tools = { path = "../aios-tools" }
anyhow.workspace = true
async-trait.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
serde_json.workspace = true

[lints]
workspace = true
