[package]
name = "aios-memory"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-protocol = { path = "../aios-protocol" }
anyhow.workspace = true
async-trait.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
