[package]
name = "aios-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Canonical Agent OS protocol — shared types, event taxonomy, and trait interfaces for all projects (Arcan, Lago, Autonomic)"

[dependencies]
chrono.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true

[lints]
workspace = true
