[package]
name = "aios-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-protocol = { path = "../aios-protocol" }
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
