[package]
name = "aios-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Canonical Agent OS runtime engine"

[dependencies]
aios-protocol = { path = "../aios-protocol", version = "0.1.0" }
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
parking_lot.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[lints]
workspace = true
