[package]
name = "aios-sandbox"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-protocol = { path = "../aios-protocol" }
anyhow.workspace = true
async-trait.workspace = true
chrono.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
