[package]
name = "aios-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
aios-protocol = { path = "../aios-protocol" }
aios-policy = { path = "../aios-policy" }
aios-sandbox = { path = "../aios-sandbox" }
anyhow.workspace = true
async-trait.workspace = true
indexmap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true

[lints]
workspace = true
